@@ -47,6 +47,8 @@ static NSStringEncoding const *encodingList=nil;
 
 static BOOL usingAutoLaunchScript = NO;
 
+static NSTimer *timer;
+
 @implementation iTermController
 
 + (iTermController*)sharedInstance;
@@ -177,6 +179,13 @@ static BOOL usingAutoLaunchScript = NO;
     
     encodingList=[NSString availableStringEncodings];
     terminalWindows = [[NSMutableArray alloc] init];
+
+    // start a common timer for all the periodic timer code for all sessions
+    timer =[[NSTimer scheduledTimerWithTimeInterval:0.02
+                                             target:self
+                                           selector:@selector(timerTick:)
+                                           userInfo:nil
+                                            repeats:YES] retain];
     
     return (self);
 }
@@ -190,8 +199,29 @@ static BOOL usingAutoLaunchScript = NO;
     
     [terminalWindows removeAllObjects];
     [terminalWindows release];
+
+    [timer invalidate];
+    [timer release];
     
     [super dealloc];
+}
+
+- (void) timerTick: (NSTimer *) sender
+{
+    PseudoTerminal *aTerminal;
+    PTYSession *aSession;
+    NSEnumerator *terminalEnumerator, *sessionEnumerator;
+
+    terminalEnumerator = [[self terminals] objectEnumerator];
+
+    // call periodic code in each session of each terminal
+    while ((aTerminal = [terminalEnumerator nextObject]) != nil)
+    {
+	sessionEnumerator = [[aTerminal sessions] objectEnumerator];
+	while ((aSession = [sessionEnumerator nextObject]) != nil)
+	    [aSession timerTick: sender];
+    }
+        
 }
 
 // Action methods
